<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ActivityClientesVip"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/descrição"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/nome_cliente">

            <EditText
                android:id="@+id/nome_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="20"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/numero">

            <EditText
                android:id="@+id/numero_cel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="11"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            style="@style/ButtonForm"
            android:id="@+id/btn_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/cadastrar"
            android:background="@drawable/btn_botao_personalizado"
            android:textColor="@color/white"/>

    </LinearLayout>

</ScrollView>
